--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include src/usbdrv/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
 -include objects.mk
@@ -59,7 +60,7 @@ all: epsilonRTOS.elf secondary-outputs
 epsilonRTOS.elf: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: AVR C Linker'
-	avr-gcc -Wl,-Map,epsilonRTOS.map -mmcu=attiny45 -o "epsilonRTOS.elf" $(OBJS) $(USER_OBJS) $(LIBS)
+	avr-gcc -Wl,-Map,epsilonRTOS.map -mrelax -mmcu=attiny45 -o "epsilonRTOS.elf" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
